# fastapi-graphql-starter

./: .env  .gitignore  .travis.yml  README.md  debug_backend.sh  docker-compose.dev.yml  docker-compose.local.yml  docker-compose.yml
fastapi-ariadne/: alembic.ini  backend.dockerfile  pyproject.toml  schema.graphql
fastapi-ariadne/alembic/versions/: 4c63714e8c59_create_user_table.py
fastapi-ariadne/app/: main.py
fastapi-ariadne/app/api/: mutations.py  queries.py  subscriptions.py
fastapi-ariadne/app/core/: config.py  security.py  utils.py
fastapi-ariadne/app/db/: db.py  rabbit.py
fastapi-ariadne/app/tests/: conftest.py  test_api.py
